# logscraper

./: Cargo.toml
src/: common.rs  main.rs
src/common/: constants.rs  enums.rs  mod.rs  structs.rs  traits.rs
src/filters/: mod.rs
src/logs/: filter.rs  mod.rs  parser.rs  source.rs
src/memory/: mod.rs
src/reader/: file.rs  find.rs  mod.rs  tail.rs
src/stream/: mod.rs
src/tui/: app.rs  mod.rs  ui.rs
