[package]
name = "logscraper"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29.0"
chrono = "0.4.42"
regex = "1"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-util = {version = "0.7.16", features = ["io"] }
notify = "8.2.0"
futures-util = "0.3.31"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "2.0.17"

[dev-dependencies]
random_str = "0.1.2"
tempdir = "0.3.7"
